# disruptor

.github/workflows/: ci-bzl-projects.yaml
projects/bzl7/: .bazelrc  BUILD.bazel  MODULE.bazel
scripts/: shell.nix
